@@ -8,7 +8,6 @@
 
 GXX_STRUCT_BEGIN_ELEMENT_WITH_CONSTRUCTOR("element", CongDispspecElement, dispspec_element)
      GXX_STRUCT_ATTRIBUTE_ENUM("type", type, TRUE, CONG_ELEMENT_TYPE_UNKNOWN, type_numeration)
-     GXX_STRUCT_ATTRIBUTE_STRING("nsURI", ns_uri, FALSE, "")
      GXX_STRUCT_ATTRIBUTE_STRING("localName", local_name, TRUE, "")
      GXX_STRUCT_ATTRIBUTE_ENUM("whitespace", whitespace, FALSE, CONG_WHITESPACE_NORMALIZE, whitespace_numeration)
      GXX_STRUCT_ATTRIBUTE_STRING("icon", icon_name, FALSE, "")
